--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       table {
 				font-family: arial, sans-serif;
 				border-collapse: collapse;
-				width: 500px;
+				width: 800px;
 			}
 			td,
 			th {
@@ -47,6 +47,36 @@
 				<td>tuandung9594@gmail.com</td>
 				<td>977780594</td>
 				<td>https://github.com/dunglt94</td>
+			</tr>
+      <tr>
+				<td>Nguyễn Đăng Thuận</td>
+				<td>code16051990@gmail.com</td>
+				<td>962608886</td>
+				<td>https://github.com/Thhuan</td>
+			</tr>
+      <tr>
+				<td>Nguyễn Thành Vinh</td>
+				<td>nguyenvinh130500@gmail.com</td>
+				<td>349647941</td>
+				<td>https://github.com/Vinhng1</td>
+			</tr>
+      <tr>
+				<td>Nguyễn Đức Thắng</td>
+				<td>thang.nd0226@gmail.com</td>
+				<td>0326623173</td>
+				<td>https://github.com/Thang0226</td>
+			</tr>
+      <tr>
+				<td>Nguyễn Tiến Thành</td>
+				<td>tienthanhbn2006@gmail.com</td>
+				<td>386845506</td>
+				<td>https://github.com/TienThanhBN/tienthanh06</td>
+			</tr>
+      <tr>
+				<td>Hoàng Minh Nhật</td>
+				<td>nhaduong3002@gmail.com</td>
+				<td>963368324</td>
+				<td>https://github.com/hoangnhat4280</td>
 			</tr>
 		</table>
 	</body>
