--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       table {
 				font-family: arial, sans-serif;
 				border-collapse: collapse;
-				width: 800px;
+				width: 100%;
 			}
 			td,
 			th {
